Change texts in reference ticket

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -377,6 +377,16 @@
                 </div>
             </dbp-translated>
         </div>
+        <div slot="place">
+            <dbp-translated subscribe="lang">
+                <div slot="de">
+                    Eintrittsticket: TU Graz
+                </div>
+                <div slot="en">
+                    Entry Ticket: TU Graz
+                </div>
+            </dbp-translated>
+        </div>
         <div slot="ticket-description">
             <dbp-translated subscribe="lang">
                 <div slot="de">
@@ -388,6 +398,16 @@
                     <span>
                         At this point the validity of an entrance ticket is displayed. Whether a ticket is active or inactive depends on the 3-G evidence imported on the controlled person's device. The reference ticket does not entitle you to enter the TU Graz.
                     </span>
+                </div>
+            </dbp-translated>
+        </div>
+        <div slot="ticket-place">
+            <dbp-translated subscribe="lang">
+                <div slot="de">
+                    Ticket: <strong>TU Graz</strong>
+                </div>
+                <div slot="en">
+                    Ticket: <strong>TU Graz</strong>
                 </div>
             </dbp-translated>
         </div>
