--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -367,12 +367,12 @@
             <dbp-translated subscribe="lang">
                 <div slot="de">
                     <p>
-                        Hier können Sie das aktuell gültige Referenzticket zum Zweck der Kontrolle einsehen.
+                        Hier können Überprüfende das aktuell gültige Referenzticket zum Zweck der Kontrolle einsehen.
                     </p>
                 </div>
                 <div slot="en">
                     <p>
-                        Here you can view the currently valid reference ticket for the purpose of control.
+                        Here, verifiers can view the currently valid reference ticket for the purpose of control.
                     </p>
                 </div>
             </dbp-translated>
@@ -391,12 +391,12 @@
             <dbp-translated subscribe="lang">
                 <div slot="de">
                     <span>
-                        An dieser Stelle wird die Gültigkeit eines Eintrittstickets angezeigt. Ob ein Ticket aktiv oder inaktiv ist, hängt von dem 3-G-Nachweis ab, der auf dem Gerät der kontrollierten Person importiert ist. Das Referenzticket berechtigt nicht zum Eintritt an die TU Graz.
+                        Vergleichen Sie als Überprüfende/r immer die Tickets, die von Studierenden vorgezeigt werden, mit dem Referenzticket. Der Hintergrund des Ticketbildes wird aus Sicherheitsgründen in regelmäßigen Abständen geändert. Wenn der Hintergrund mit dem des aktuellen Referenztickets übereinstimmt, ist das Ticket gültig. Das Referenzticket berechtigt nicht zum Eintritt an die TU Graz.
                     </span>
                 </div>
                 <div slot="en">
                     <span>
-                        At this point the validity of an entrance ticket is displayed. Whether a ticket is active or inactive depends on the 3-G evidence imported on the controlled person's device. The reference ticket does not entitle you to enter the TU Graz.
+                        As a verifier, always compare the tickets presented by students with the reference ticket. The background of the ticket image changes at regular intervals for security reasons. If the background matches the one of the reference ticket, the ticket is valid. The reference ticket does not entitle you to enter TU Graz.
                     </span>
                 </div>
             </dbp-translated>
@@ -454,7 +454,7 @@
                     <br>
                     <p>
                         Ist ein <strong>gültiger grüner Pass</strong> auf dem Gerät importiert, wird dessen QR-Code angezeigt das Ticket in Farbe dargestellt. Der QR-Code kann mit
-                        <a href="https://greencheck.gv.at/" title="Greencheck" target="_blank" class="int-link-external">Green Check</a> validiert werden.
+                        <a href="https://greencheck.gv.at/" title="Greencheck" target="_blank" class="int-link-external">Green Check</a> überprüft werden.
                         <br><br>
                         Ist ein <strong>Selbsttest</strong> des Landes Steiermark oder Kärnten auf dem Gerät importiert, wird dessen QR-Code angezeigt und das Ticket in Graustufen dargestellt.
                         Dieser QR-Code kann nicht in greenlight validiert werden, daher muss die Kontrolle mit einem QR-Code Scanner erfolgen.
