Change more texts

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -453,7 +453,7 @@
                     <h4>Informationen zum 3-G-Nachweis</h4>
                     <br>
                     <p>
-                        Ist ein <strong>gültiger grüner Pass</strong> auf dem Gerät importiert, wird dessen QR-Code angezeigt das Ticket in Farbe dargestellt. Der QR-Code kann mit
+                        Ist ein <strong>gültiger grüner Pass</strong> auf dem Gerät importiert, wird dessen QR-Code angezeigt und das Ticket in Farbe dargestellt. Der QR-Code kann mit
                         <a href="https://greencheck.gv.at/" title="Greencheck" target="_blank" class="int-link-external">Green Check</a> überprüft werden.
                         <br><br>
                         Ist ein <strong>Selbsttest</strong> des Landes Steiermark oder Kärnten auf dem Gerät importiert, wird dessen QR-Code angezeigt und das Ticket in Graustufen dargestellt.
@@ -466,7 +466,7 @@
                     <h4>Information about 3-G evidence</h4>
                     <br>
                     <p>
-                        If a <strong>valid health certitificate</strong> is available on this device then its QR-code is displayed and the ticked is shown in color.
+                        If a <strong>valid health certitificate</strong> is available on this device then its QR-code is displayed and the ticket is shown in color.
                         This QR-code can be checked with <a href="https://greencheck.gv.at/" title="Greencheck" target="_blank" class="int-link-external">Green Check</a>.
                         <br><br>
                         If a <strong>self-test</strong> was issued by Land Steiermark or Land Kärnten is available on this device then its QR-code is displayed and the ticket is shown in black and white.
