--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -454,12 +454,12 @@
                     <br>
                     <p>
                         Ist ein <strong>gültiger grüner Pass</strong> auf dem Gerät importiert, wird dessen QR-Code angezeigt und das Ticket in Farbe dargestellt. Der QR-Code kann mit
-                        <a href="https://greencheck.gv.at/" title="Greencheck" target="_blank" class="int-link-external">Green Check</a> überprüft werden.
+                        <a href="https://greencheck.gv.at/" title="GreenCheck" target="_blank" class="int-link-external">GreenCheck</a> überprüft werden.
                         <br><br>
                         Ist ein <strong>Selbsttest</strong> des Landes Steiermark oder Kärnten auf dem Gerät importiert, wird dessen QR-Code angezeigt und das Ticket in Graustufen dargestellt.
-                        Dieser QR-Code kann nicht in greenlight validiert werden, daher muss die Kontrolle mit einem QR-Code Scanner erfolgen.
+                        Dieser QR-Code kann nicht in greenlight validiert werden, daher muss die Kontrolle mit einem herkömmlichen QR-Code Scanner erfolgen.
                         <br><br>
-                        Ist ein <strong>gültiger Test der Teststraße der TU Graz</strong> auf dem Gerät importiert, wird das Ticket in Farbe dargestellt. Die manuelle Validierung dieses Tests kann nur mit dem Originaldokument erfolgen.
+                        Ist ein <strong>gültiger Test der Teststraße der TU Graz</strong> auf dem Gerät importiert, wird das Ticket in Farbe dargestellt. Die manuelle Überprüfung dieses Tests kann nur mit dem Originaldokument erfolgen.
                     </p>
                 </div>
                 <div slot="en">
@@ -467,12 +467,12 @@
                     <br>
                     <p>
                         If a <strong>valid health certitificate</strong> is available on this device then its QR-code is displayed and the ticket is shown in color.
-                        This QR-code can be checked with <a href="https://greencheck.gv.at/" title="Greencheck" target="_blank" class="int-link-external">Green Check</a>.
+                        This QR-code can be checked with <a href="https://greencheck.gv.at/" title="GreenCheck" target="_blank" class="int-link-external">GreenCheck</a>.
                         <br><br>
                         If a <strong>self-test</strong> was issued by Land Steiermark or Land Kärnten is available on this device then its QR-code is displayed and the ticket is shown in black and white.
-                        This QR-code cannot be validated by this app, therefore its validation requires a QR-code scanner.
+                        This QR-code cannot be validated by this app, therefore its validation requires a common QR-code scanner.
                         <br><br>
-                        If a <strong>valid test made by Teststraße of TU Graz</strong> is available on this device then the ticket is shown in color. Manual validation of this test can only be done with the original document.
+                        If a <strong>valid test made by Teststraße of TU Graz</strong> is available on this device then the ticket is shown in color. The manual check of this test can only be done with the original document.
                     </p>
                 </div>
             </dbp-translated>
