Change more texts

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -391,12 +391,12 @@
             <dbp-translated subscribe="lang">
                 <div slot="de">
                     <span>
-                        Vergleichen Sie als Überprüfende/r immer die Tickets, die von Studierenden vorgezeigt werden, mit dem Referenzticket. Der Hintergrund des Ticketbildes wird aus Sicherheitsgründen in regelmäßigen Abständen geändert. Wenn der Hintergrund mit dem des aktuellen Referenztickets übereinstimmt, ist das Ticket gültig. Das Referenzticket berechtigt nicht zum Eintritt an die TU Graz.
+                        Vergleichen Sie als Überprüfende/r immer die Tickets, die von Studierenden vorgezeigt werden, mit dem Referenzticket. Der Hintergrund des Ticketbildes wird aus Sicherheitsgründen in regelmäßigen Abständen geändert. Wenn der Hintergrund mit dem des aktuellen Referenztickets übereinstimmt, ist das Ticket gültig. Das Referenzticket berechtigt nicht für den Zugang zu Räumlichkeiten der TU Graz.
                     </span>
                 </div>
                 <div slot="en">
                     <span>
-                        As a verifier, always compare the tickets presented by students with the reference ticket. The background of the ticket image changes at regular intervals for security reasons. If the background matches the one of the reference ticket, the ticket is valid. The reference ticket does not entitle you to enter TU Graz.
+                        As a verifier, always compare the tickets presented by students with the reference ticket. The background of the ticket image changes at regular intervals for security reasons. If the background matches the one of the reference ticket, the ticket is valid. The reference ticket does not entitle you to enter rooms at TU Graz.
                     </span>
                 </div>
             </dbp-translated>
