--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -199,7 +199,7 @@
             <dbp-translated subscribe="lang">
                 <div slot="de">
                     <p>
-                        Sie können Ihren grünen Pass importieren, indem Sie den entsprechenden QR-Code scannen. Alternativ kann auch ein PDF-Dokument oder ein Bild mit dem QR-Code ausgewählt werden.
+                        Sie können Ihren Grünen Pass importieren, indem Sie den entsprechenden QR-Code scannen. Alternativ kann auch ein PDF-Dokument oder ein Bild mit dem QR-Code ausgewählt werden.
                         <br /><br />
                         <% if(gpSearchSelfTestStringArray && gpSearchSelfTestStringArray !== ''){ %>
                             Selbsttests der Länder Steiermark und Kärnten können ebenfalls importiert, aber nicht direkt in der Applikation validiert werden. Sie müssen sicherstellen, dass Ihr Testergebnis noch gültig ist. Die Kontrolle erfolgt beim Einlass.
@@ -217,7 +217,7 @@
                 </div>
                 <div slot="en">
                     <p>
-                        You can import your green pass by scanning the corresponding QR code. Alternatively, you can select a PDF document or an image with the QR code.
+                        You can import your Green Pass by scanning the corresponding QR code. Alternatively, you can select a PDF document or an image with the QR code.
                         <br /><br />
                         <% if(gpSearchSelfTestStringArray && gpSearchSelfTestStringArray !== ''){ %>
                             Self-tests from Styria and Carinthia can also be imported, but not validated directly in the application. You must ensure that your test result is still valid. The control takes place at the entrance.
@@ -453,7 +453,7 @@
                     <h4>Informationen zum 3-G-Nachweis</h4>
                     <br>
                     <p>
-                        Ist ein <strong>gültiger grüner Pass</strong> auf dem Gerät importiert, wird dessen QR-Code angezeigt und das Ticket in Farbe dargestellt. Der QR-Code kann mit
+                        Ist ein <strong>gültiger Grüner Pass</strong> auf dem Gerät importiert, wird dessen QR-Code angezeigt und das Ticket in Farbe dargestellt. Der QR-Code kann mit
                         <a href="https://greencheck.gv.at/" title="GreenCheck" target="_blank" class="int-link-external">GreenCheck</a> überprüft werden.
                         <br><br>
                         Ist ein <strong>Selbsttest</strong> des Landes Steiermark oder Kärnten auf dem Gerät importiert, wird dessen QR-Code angezeigt und das Ticket in Graustufen dargestellt.
