--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -210,7 +210,7 @@
                         <p>
                             Was macht die TU Graz mit Ihren Daten? Die Datenschutzerklärung zur App "TU Graz greenlight" finden sie hier:
                             <a target="_blank" class="int-link-external" href="<%= getPrivateUrl('datenschutzerklaerung-tu-graz-greenlight.pdf') %>" title="Zur Datenschutzerklärung">
-                                <span><!---->Zur Datenschutzerklärung </span>
+                                <span>Zur Datenschutzerklärung </span>
                             </a>
                         </p>
                     </div>
@@ -228,7 +228,7 @@
                         <p>
                             What does TU Graz do with your data? You can find the data protection declaration for the app "TU Graz greenlight" here:
                             <a target="_blank" class="int-link-external" href="<%= getPrivateUrl('datenschutzerklaerung-tu-graz-greenlight.pdf') %>" title="Privacy statement">
-                                <span><!---->Privacy statement </span>
+                                <span>Privacy statement </span>
                             </a>
                         </p>
                     </div>
@@ -314,10 +314,10 @@
                     </p>
                 </div>
                 <div slot="en">
-                    No valid stored 3-G-evidence was found. Show your proof manually or upload a new proof by requesting a new ticket under
+                    No valid stored 3-G-evidence was found. Show your evidence manually or upload a new evidence by requesting a new ticket under
                     <a href='acquire-3g-ticket' title='Eintrittsticket erstellen' target='_self' class='int-link-internal'>
                         <span>Create entry ticket</span>.
-                    </a>"
+                    </a>
                 </div>
             </dbp-translated>
         </div>
@@ -396,7 +396,7 @@
                 </div>
                 <div slot="en">
                     <span>
-                        As a verifier, always compare the tickets presented by students with the reference ticket. The background of the ticket image changes at regular intervals for security reasons. If the background matches the one of the reference ticket, the ticket is valid. The reference ticket does not entitle you to enter rooms at TU Graz.
+                        As a verifier, always compare the tickets presented by students with the reference ticket. The background of the ticket image changes in regular intervals for security reasons. If the background image matches the one of the reference ticket, the ticket is valid. The reference ticket does not entitle you to enter rooms at TU Graz.
                     </span>
                 </div>
             </dbp-translated>
@@ -463,14 +463,14 @@
                     </p>
                 </div>
                 <div slot="en">
-                    <h4>Information about 3-G evidence</h4>
+                    <h4>Information about 3-G-evidence</h4>
                     <br>
                     <p>
-                        If a <strong>valid health certitificate</strong> is available on this device then its QR-code is displayed and the ticket is shown in color.
-                        This QR-code can be checked with <a href="https://greencheck.gv.at/" title="GreenCheck" target="_blank" class="int-link-external">GreenCheck</a>.
+                        If a <strong>valid health certitificate</strong> is available on this device then its QR code is displayed and the ticket is shown in color.
+                        This QR code can be checked with <a href="https://greencheck.gv.at/" title="GreenCheck" target="_blank" class="int-link-external">GreenCheck</a>.
                         <br><br>
-                        If a <strong>self-test</strong> was issued by Land Steiermark or Land Kärnten is available on this device then its QR-code is displayed and the ticket is shown in black and white.
-                        This QR-code cannot be validated by this app, therefore its validation requires a common QR-code scanner.
+                        If a <strong>self-test</strong> that was issued by Styria and Carinthia, is available on this device then its QR code is displayed and the ticket is shown in black and white.
+                        This QR code cannot be validated by this app, therefore its validation requires a common QR code scanner.
                         <br><br>
                         If a <strong>valid test made by Teststraße of TU Graz</strong> is available on this device then the ticket is shown in color. The manual check of this test can only be done with the original document.
                     </p>
