Change texts in all activities

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -153,7 +153,7 @@
         <div slot="description">
             <dbp-translated subscribe="lang">
                 <div slot="de">
-                    Erstellt ein Ticket für den Zugang zu Räumlichkeiten der TU Graz.
+                    Erstellt ein Ticket für den Zugang zu den Räumlichkeiten der TU Graz.
                 </div>
                 <div slot="en">
                     Creates a ticket for access to premises of TU Graz.
@@ -209,8 +209,8 @@
                     <div class="privacy-information">
                         <p>
                             Was macht die TU Graz mit Ihren Daten? Die Datenschutzerklärung zur App "TU Graz greenlight" finden sie hier:
-                            <a target="_blank" class="int-link-external" href="<%= getPrivateUrl('datenschutzerklaerung-tu-graz-greenlight.pdf') %>" title="Zur Datenschutzerklärung">
-                                <span>Zur Datenschutzerklärung </span>
+                            <a target="_blank" class="int-link-external" href="<%= getPrivateUrl('datenschutzerklaerung-tu-graz-greenlight.pdf') %>" title="zur Datenschutzerklärung">
+                                <span>zur Datenschutzerklärung </span>
                             </a>
                         </p>
                     </div>
@@ -227,8 +227,8 @@
                     <div class="privacy-information">
                         <p>
                             What does TU Graz do with your data? You can find the data protection declaration for the app "TU Graz greenlight" here:
-                            <a target="_blank" class="int-link-external" href="<%= getPrivateUrl('datenschutzerklaerung-tu-graz-greenlight.pdf') %>" title="Privacy statement">
-                                <span>Privacy statement </span>
+                            <a target="_blank" class="int-link-external" href="<%= getPrivateUrl('datenschutzerklaerung-tu-graz-greenlight.pdf') %>" title="privacy statement">
+                                <span>privacy statement </span>
                             </a>
                         </p>
                     </div>
@@ -391,7 +391,7 @@
             <dbp-translated subscribe="lang">
                 <div slot="de">
                     <span>
-                        Vergleichen Sie als Überprüfende/r immer die Tickets, die von Studierenden vorgezeigt werden, mit dem Referenzticket. Der Hintergrund des Ticketbildes wird aus Sicherheitsgründen in regelmäßigen Abständen geändert. Wenn der Hintergrund mit dem des aktuellen Referenztickets übereinstimmt, ist das Ticket gültig. Das Referenzticket berechtigt nicht für den Zugang zu Räumlichkeiten der TU Graz.
+                        Vergleichen Sie als Überprüfende/r immer die Tickets, die von Studierenden vorgezeigt werden, mit dem Referenzticket. Der Hintergrund des Ticketbildes wird aus Sicherheitsgründen in regelmäßigen Abständen geändert. Wenn der Hintergrund mit dem des aktuellen Referenztickets übereinstimmt, ist das Ticket gültig. Das Referenzticket berechtigt nicht für den Zugang zu den Räumlichkeiten der TU Graz.
                     </span>
                 </div>
                 <div slot="en">
