--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -74,11 +74,7 @@
     gp-search-hash-internal-test-string="<%= gpSearchQRInternalTestString %>"
     gp-search-self-test-string-array="<%= gpSearchSelfTestStringArray %>"
     preselected-option="<%= preselectedOption %>"
-    file-handling-enabled-targets="local,nextcloud"
-    nextcloud-web-app-password-url="<%= nextcloudWebAppPasswordURL %>"
-    nextcloud-webdav-url="<%= nextcloudWebDavURL %>"
-    nextcloud-name="<%= nextcloudName %>"
-    nextcloud-file-url="<%= nextcloudFileURL %>"
+    file-handling-enabled-targets="local"
     src="<%= getUrl(name + '.topic.metadata.json') %>"
     base-path="<%= getUrl('') %>"
     keycloak-config='{"url": "<%= keyCloakBaseURL %>", "realm": "<%= keyCloakRealm %>", "clientId": "<%= keyCloakClientId %>", "silentCheckSsoRedirectUri": "<%= getUrl('silent-check-sso.html') %>"}'
