--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -204,7 +204,7 @@
                     </p>
                     <div class="privacy-information">
                         <p>
-                            Was macht die TU Graz mit Ihren Daten? Die Datenschutzerklärung zur App "TU Graz greenlight" finden sie hier:
+                            Was macht die TU Graz mit Ihren Daten? Die Datenschutzerklärung zur App "TU Graz greenlight" finden Sie hier:
                             <a target="_blank" class="int-link-external" href="<%= getPrivateUrl('datenschutzerklaerung-tu-graz-greenlight.pdf') %>" title="zur Datenschutzerklärung">
                                 <span>zur Datenschutzerklärung </span>
                             </a>
