Remove support for TU Graz-internal Tests

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -454,8 +454,8 @@
                         <br><br>
                         Ist ein <strong>Selbsttest</strong> des Landes Steiermark oder Kärnten auf dem Gerät importiert, wird dessen QR-Code angezeigt und das Ticket in Graustufen dargestellt.
                         Dieser QR-Code kann nicht in greenlight validiert werden, daher muss die Kontrolle mit einem herkömmlichen QR-Code Scanner erfolgen.
-                        <br><br>
-                        Ist ein <strong>gültiger Test der Teststraße der TU Graz</strong> auf dem Gerät importiert, wird das Ticket in Farbe dargestellt. Die manuelle Überprüfung dieses Tests kann nur mit dem Originaldokument erfolgen.
+                        <!-- <br><br>
+                        Ist ein <strong>gültiger Test der Teststraße der TU Graz</strong> auf dem Gerät importiert, wird das Ticket in Farbe dargestellt. Die manuelle Überprüfung dieses Tests kann nur mit dem Originaldokument erfolgen. -->
                     </p>
                 </div>
                 <div slot="en">
@@ -467,8 +467,8 @@
                         <br><br>
                         If a <strong>self-test</strong> that was issued by Styria and Carinthia, is available on this device then its QR code is displayed and the ticket is shown in black and white.
                         This QR code cannot be validated by this app, therefore its validation requires a common QR code scanner.
-                        <br><br>
-                        If a <strong>valid test made by Teststraße of TU Graz</strong> is available on this device then the ticket is shown in color. The manual check of this test can only be done with the original document.
+                        <!-- <br><br>
+                        If a <strong>valid test made by Teststraße of TU Graz</strong> is available on this device then the ticket is shown in color. The manual check of this test can only be done with the original document. -->
                     </p>
                 </div>
             </dbp-translated>
