--- a/assets/dbp-greenlight.topic.metadata.json.ejs
+++ b/assets/dbp-greenlight.topic.metadata.json.ejs
@@ -1,11 +1,11 @@
 {
   "name": {
-    "de": "greenlight",
-    "en": "greenlight"
+    "de": "TU Graz greenlight",
+    "en": "TU Graz greenlight"
   },
   "short_name": {
-    "de": "greenlight",
-    "en": "greenlight"
+    "de": "TU Graz greenlight",
+    "en": "TU Graz greenlight"
   },
   "description": {
     "de": "Erstellen Sie ein Eintrittsticket und importieren Sie Ihren 3-G-Nachweis auf diesem Gerät, um ihn so schon vor dem Besuch einer Lehrveranstaltung oder Prüfung für den Eintritt zu validieren. Das Ticket ermöglicht Ihnen anschließend den schnellen und effizienten Zugang zu den Räumlichkeiten der Universität.",
