Add new variable for TUGRAZonline

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -74,6 +74,7 @@
     gp-search-hash-internal-test-string="<%= gpSearchQRInternalTestString %>"
     gp-search-self-test-string-array="<%= gpSearchSelfTestStringArray %>"
     preselected-option="<%= preselectedOption %>"
+    service-name="<%= serviceName %>"
     file-handling-enabled-targets="local"
     src="<%= getUrl(name + '.topic.metadata.json') %>"
     base-path="<%= getUrl('') %>"
