--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -345,6 +345,7 @@
                     <a href='acquire-3g-ticket' title='Eintrittsticket erstellen' target='_self' class='int-link-internal'>
                         <span>Eintrittsticket erstellen</span>
                     </a>
+                    einen neuen Nachweis hochladen, indem Sie ein neues Ticket anfordern.
                 </div>
                 <div slot="en">
                     If the 3-G-evidence is no longer valid, you can go to
