Add an attribute for invalidate selfTest

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -72,6 +72,7 @@
     lang="de" entry-point-url="<%= entryPointURL %>"
     gp-search-hash-string="<%= gpSearchQRString %>"
     gp-search-self-test-string-array="<%= gpSearchSelfTestStringArray %>"
+    <% if(selfTestValid) { %> gp-self-test-valid <% } %>
     preselected-option="<%= preselectedOption %>"
     service-name="<%= serviceName %>"
     file-handling-enabled-targets="local"
@@ -197,7 +198,7 @@
                     <p>
                         Sie können Ihren Grünen Pass importieren, indem Sie den entsprechenden QR-Code scannen. Alternativ kann auch ein PDF-Dokument oder ein Bild mit dem QR-Code ausgewählt werden.
                         <br /><br />
-                        <% if(gpSearchSelfTestStringArray && gpSearchSelfTestStringArray !== ''){ %>
+                        <% if(gpSearchSelfTestStringArray && gpSearchSelfTestStringArray !== '' && selfTestValid){ %>
                             Selbsttests der Länder Steiermark und Kärnten können ebenfalls importiert, aber nicht direkt in der Applikation validiert werden. Sie müssen sicherstellen, dass Ihr Testergebnis noch gültig ist. Die Kontrolle erfolgt beim Einlass.
                             <br /><br />
                         <% } %>
@@ -215,7 +216,7 @@
                     <p>
                         You can import your Green Pass by scanning the corresponding QR code. Alternatively, you can select a PDF document or an image with the QR code.
                         <br /><br />
-                        <% if(gpSearchSelfTestStringArray && gpSearchSelfTestStringArray !== ''){ %>
+                        <% if(gpSearchSelfTestStringArray && gpSearchSelfTestStringArray !== '' && selfTestValid){ %>
                             Self-tests from Styria and Carinthia can also be imported, but not validated directly in the application. You must ensure that your test result is still valid. The control takes place at the entrance.
                             <br /><br />
                         <% } %>
@@ -404,11 +405,11 @@
                     <p>
                         Ist ein <strong>gültiger Grüner Pass</strong> auf dem Gerät importiert, wird dessen QR-Code angezeigt und das Ticket in Farbe dargestellt. Der QR-Code kann mit
                         <a href="https://greencheck.gv.at/" title="GreenCheck" target="_blank" class="int-link-external">GreenCheck</a> überprüft werden.
-                        <br><br>
-                        Ist ein <strong>Selbsttest</strong> des Landes Steiermark oder Kärnten auf dem Gerät importiert, wird dessen QR-Code angezeigt und das Ticket in Graustufen dargestellt.
-                        Dieser QR-Code kann nicht in greenlight validiert werden, daher muss die Kontrolle mit einem herkömmlichen QR-Code Scanner erfolgen.
-                        <!-- <br><br>
-                        Ist ein <strong>gültiger Test der Teststraße der TU Graz</strong> auf dem Gerät importiert, wird das Ticket in Farbe dargestellt. Die manuelle Überprüfung dieses Tests kann nur mit dem Originaldokument erfolgen. -->
+                        <% if(gpSearchSelfTestStringArray && gpSearchSelfTestStringArray !== '' && selfTestValid){ %>
+                            <br><br>
+                            Ist ein <strong>Selbsttest</strong> des Landes Steiermark oder Kärnten auf dem Gerät importiert, wird dessen QR-Code angezeigt und das Ticket in Graustufen dargestellt.
+                            Dieser QR-Code kann nicht in greenlight validiert werden, daher muss die Kontrolle mit einem herkömmlichen QR-Code Scanner erfolgen.
+                        <% } %>
                     </p>
                 </div>
                 <div slot="en">
@@ -417,11 +418,11 @@
                     <p>
                         If a <strong>valid health certitificate</strong> is available on this device then its QR code is displayed and the ticket is shown in color.
                         This QR code can be checked with <a href="https://greencheck.gv.at/" title="GreenCheck" target="_blank" class="int-link-external">GreenCheck</a>.
-                        <br><br>
-                        If a <strong>self-test</strong> that was issued by Styria and Carinthia, is available on this device then its QR code is displayed and the ticket is shown in black and white.
-                        This QR code cannot be validated by this app, therefore its validation requires a common QR code scanner.
-                        <!-- <br><br>
-                        If a <strong>valid test made by Teststraße of TU Graz</strong> is available on this device then the ticket is shown in color. The manual check of this test can only be done with the original document. -->
+                        <% if(gpSearchSelfTestStringArray && gpSearchSelfTestStringArray !== '' && selfTestValid){ %>
+                            <br><br>
+                            If a <strong>self-test</strong> that was issued by Styria and Carinthia, is available on this device then its QR code is displayed and the ticket is shown in black and white.
+                            This QR code cannot be validated by this app, therefore its validation requires a common QR code scanner.
+                        <% } %>
                     </p>
                 </div>
             </dbp-translated>
