--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -196,7 +196,7 @@
             <dbp-translated subscribe="lang">
                 <div slot="de">
                     <p>
-                        Sie können Ihren Grünen Pass importieren, indem Sie den entsprechenden QR-Code scannen. Alternativ kann auch ein PDF-Dokument oder ein Bild mit dem QR-Code ausgewählt werden.
+                        Sie können Ihren Nachweis einer geringen epidemiologischen Gefahr importieren, indem Sie den entsprechenden QR-Code scannen. Alternativ kann auch ein PDF-Dokument oder ein Bild mit dem QR-Code ausgewählt werden.
                         <br /><br />
                         <% if(gpSearchSelfTestStringArray && gpSearchSelfTestStringArray !== '' && selfTestValid){ %>
                             Selbsttests der Länder Steiermark und Kärnten können ebenfalls importiert, aber nicht direkt in der Applikation validiert werden. Sie müssen sicherstellen, dass Ihr Testergebnis noch gültig ist. Die Kontrolle erfolgt beim Einlass.
@@ -214,7 +214,7 @@
                 </div>
                 <div slot="en">
                     <p>
-                        You can import your Green Pass by scanning the corresponding QR code. Alternatively, you can select a PDF document or an image with the QR code.
+                        You can import your evidence of a low epidemiological risk by scanning the corresponding QR code. Alternatively, you can select a PDF document or an image with the QR code.
                         <br /><br />
                         <% if(gpSearchSelfTestStringArray && gpSearchSelfTestStringArray !== '' && selfTestValid){ %>
                             Self-tests from Styria and Carinthia can also be imported, but not validated directly in the application. You must ensure that your test result is still valid. The control takes place at the entrance.
@@ -258,7 +258,7 @@
             <dbp-translated subscribe="lang">
                 <div slot="de">
                     <p>
-                        Es wurde kein gültiger gespeicherter 3-G-Nachweis gefunden. Zeigen Sie ihren Nachweis manuell vor oder laden Sie einen neuen Nachweis hoch, indem Sie ein neues Ticket unter
+                        Es wurde kein gültiger gespeicherter Nachweis gefunden. Zeigen Sie ihren Nachweis manuell vor oder laden Sie einen neuen Nachweis hoch, indem Sie ein neues Ticket unter
                             <a href='acquire-3g-ticket' title='Eintrittsticket erstellen' target='_self' class='int-link-internal'>
                             <span>Eintrittsticket erstellen</span>
                             </a>
@@ -266,7 +266,7 @@
                     </p>
                 </div>
                 <div slot="en">
-                    No valid stored 3-G-evidence was found. Show your evidence manually or upload a new evidence by requesting a new ticket under
+                    No valid stored evidence was found. Show your evidence manually or upload a new evidence by requesting a new ticket under
                     <a href='acquire-3g-ticket' title='Eintrittsticket erstellen' target='_self' class='int-link-internal'>
                         <span>Create entry ticket</span>.
                     </a>
@@ -296,14 +296,14 @@
             </style>
             <dbp-translated subscribe="lang">
                 <div slot="de">
-                    Falls der 3-G-Nachweis nicht mehr gültig ist, können Sie unter
+                    Falls der Nachweis nicht mehr gültig ist, können Sie unter
                     <a href='acquire-3g-ticket' title='Eintrittsticket erstellen' target='_self' class='int-link-internal'>
                         <span>Eintrittsticket erstellen</span>
                     </a>
                     einen neuen Nachweis hochladen, indem Sie ein neues Ticket anfordern.
                 </div>
                 <div slot="en">
-                    If the 3-G-evidence is no longer valid, you can go to
+                    If the evidence is no longer valid, you can go to
                     <a href='acquire-3g-ticket' title='Eintrittsticket erstellen' target='_self' class='int-link-internal'>
                         <span>Create entry ticket</span>
                     </a>
@@ -400,7 +400,7 @@
             </style>
             <dbp-translated subscribe="lang">
                 <div slot="de">
-                    <h4>Informationen zum 3-G-Nachweis</h4>
+                    <h4>Informationen zum Nachweis</h4>
                     <br>
                     <p>
                         Ist ein <strong>gültiger Grüner Pass</strong> auf dem Gerät importiert, wird dessen QR-Code angezeigt und das Ticket in Farbe dargestellt. Der QR-Code kann mit
@@ -413,7 +413,7 @@
                     </p>
                 </div>
                 <div slot="en">
-                    <h4>Information about 3-G-evidence</h4>
+                    <h4>Information about evidence</h4>
                     <br>
                     <p>
                         If a <strong>valid health certitificate</strong> is available on this device then its QR code is displayed and the ticket is shown in color.
