--- a/assets/dbp-greenlight.topic.metadata.json.ejs
+++ b/assets/dbp-greenlight.topic.metadata.json.ejs
@@ -8,8 +8,8 @@
     "en": "TU Graz greenlight"
   },
   "description": {
-    "de": "Erstellen Sie ein Eintrittsticket und importieren Sie Ihren 3-G-Nachweis auf diesem Gerät, um ihn so schon vor dem Besuch einer Lehrveranstaltung oder Prüfung für den Eintritt zu validieren. Das Ticket ermöglicht Ihnen anschließend den schnellen und effizienten Zugang zu den Räumlichkeiten der Universität.",
-    "en": "Create an entrance ticket and import your 3-G evidence on this device to validate it for admission even before attending a course or exam. The ticket then enables you to access the university premises quickly and efficiently."
+    "de": "Erstellen Sie ein Eintrittsticket und importieren Sie Ihren Nachweis einer geringen epidemiologischen Gefahr auf diesem Gerät, um ihn so schon vor dem Besuch einer Lehrveranstaltung oder Prüfung für den Eintritt zu validieren. Das Ticket ermöglicht Ihnen anschließend den schnellen und effizienten Zugang zu den Räumlichkeiten der Universität.",
+    "en": "Create an entrance ticket and import your evidence of a low epidemiological risk on this device to validate it for admission even before attending a course or exam. The ticket then enables you to access the university premises quickly and efficiently."
   },
   "routing_name": "greenlight",
   "activities": [
