--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -203,6 +203,12 @@
                             <br /><br />
                         <% } %>
                     </p>
+                    <p>
+                        Weitere Informationen zum Thema Corona an der TU Graz finden Sie unter: 
+                        <a target="_blank" class="int-link-external" href="https://tugraz.at/go/coronavirus" title="Coronavirus TU Graz">
+                            <span>Coronavirus TU Graz </span>
+                        </a>
+                    </p>
                     <div class="privacy-information">
                         <p>
                             Was macht die TU Graz mit Ihren Daten? Die Datenschutzerklärung zur App "TU Graz greenlight" finden Sie hier:
@@ -220,6 +226,12 @@
                             Self-tests from Styria and Carinthia can also be imported, but not validated directly in the application. You must ensure that your test result is still valid. The control takes place at the entrance.
                             <br /><br />
                         <% } %>
+                    </p>
+                    <p>
+                        For more information about Corona at TU Graz, please visit: 
+                        <a target="_blank" class="int-link-external" href="https://tugraz.at/go/coronavirus" title="Coronavirus TU Graz">
+                            <span>Coronavirus TU Graz </span>
+                        </a>
                     </p>
                     <div class="privacy-information">
                         <p>
@@ -341,12 +353,18 @@
             <dbp-translated subscribe="lang">
                 <div slot="de">
                     <span>
-                        Vergleichen Sie als Überprüfende/r immer die Tickets, die von Studierenden vorgezeigt werden, mit dem Referenzticket. Der Hintergrund des Ticketbildes wird aus Sicherheitsgründen in regelmäßigen Abständen geändert. Wenn der Hintergrund mit dem des aktuellen Referenztickets übereinstimmt, ist das Ticket gültig. Das Referenzticket berechtigt nicht für den Zugang zu den Räumlichkeiten der TU Graz.
+                        Vergleichen Sie als Überprüfende/r immer die Tickets, die von Studierenden vorgezeigt werden, mit dem Referenzticket. Der Hintergrund des Ticketbildes wird aus Sicherheitsgründen in regelmäßigen Abständen geändert. Wenn der Hintergrund mit dem des aktuellen Referenztickets übereinstimmt, ist das Ticket gültig. Das Referenzticket berechtigt nicht für den Zugang zu den Räumlichkeiten der TU Graz. Genauere Informationen finden Sie unter: 
+                        <a target="_blank" class="int-link-external" href="https://tu4u.tugraz.at/go/green" title="TU Graz greenlight">
+                            <span>TU Graz greenlight </span>
+                        </a>
                     </span>
                 </div>
                 <div slot="en">
                     <span>
-                        As a verifier, always compare the tickets presented by students with the reference ticket. The background of the ticket image changes in regular intervals for security reasons. If the background image matches the one of the reference ticket, the ticket is valid. The reference ticket does not entitle you to enter rooms at TU Graz.
+                        As a verifier, always compare the tickets presented by students with the reference ticket. The background of the ticket image changes in regular intervals for security reasons. If the background image matches the one of the reference ticket, the ticket is valid. The reference ticket does not entitle you to enter rooms at TU Graz. More detailed information can be found at: 
+                        <a target="_blank" class="int-link-external" href="https://tu4u.tugraz.at/go/green" title="TU Graz greenlight">
+                            <span>TU Graz greenlight </span>
+                        </a>
                     </span>
                 </div>
             </dbp-translated>
