--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -202,12 +202,11 @@
                             Selbsttests der Länder Steiermark und Kärnten können ebenfalls importiert, aber nicht direkt in der Applikation validiert werden. Sie müssen sicherstellen, dass Ihr Testergebnis noch gültig ist. Die Kontrolle erfolgt beim Einlass.
                             <br /><br />
                         <% } %>
-                    </p>
-                    <p>
                         Weitere Informationen zum Thema Corona an der TU Graz finden Sie unter: 
                         <a target="_blank" class="int-link-external" href="https://tugraz.at/go/coronavirus" title="Coronavirus TU Graz">
                             <span>Coronavirus TU Graz </span>
                         </a>
+                        <br /><br />
                     </p>
                     <div class="privacy-information">
                         <p>
@@ -226,12 +225,11 @@
                             Self-tests from Styria and Carinthia can also be imported, but not validated directly in the application. You must ensure that your test result is still valid. The control takes place at the entrance.
                             <br /><br />
                         <% } %>
-                    </p>
-                    <p>
                         For more information about Corona at TU Graz, please visit: 
                         <a target="_blank" class="int-link-external" href="https://tugraz.at/go/coronavirus" title="Coronavirus TU Graz">
                             <span>Coronavirus TU Graz </span>
                         </a>
+                        <br /><br />
                     </p>
                     <div class="privacy-information">
                         <p>
@@ -350,6 +348,41 @@
             </dbp-translated>
         </div>
         <div slot="ticket-description">
+            <style>
+                .int-link-external{
+                    transition: background-color 0.15s, color 0.15s;
+                    border-bottom: 1px solid rgba(0,0,0,0.3);
+                }
+
+                .int-link-external:hover{
+                    background-color: black;
+                    color: white;
+                }
+
+                .int-link-external:after{
+                    content: "\00a0\00a0\00a0";
+                    background-image: url('data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3Ardf%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2F02%2F22-rdf-syntax-ns%23%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20height%3D%228.6836mm%22%20width%3D%225.2043mm%22%20version%3D%221.1%22%20xmlns%3Acc%3D%22http%3A%2F%2Fcreativecommons.org%2Fns%23%22%20xmlns%3Adc%3D%22http%3A%2F%2Fpurl.org%2Fdc%2Felements%2F1.1%2F%22%20viewBox%3D%220%200%2018.440707%2030.768605%22%3E%3Cg%20transform%3D%22translate(-382.21%20-336.98)%22%3E%3Cpath%20style%3D%22stroke-linejoin%3Around%3Bstroke%3A%23000%3Bstroke-linecap%3Around%3Bstroke-miterlimit%3A10%3Bstroke-width%3A2%3Bfill%3Anone%22%20d%3D%22m383.22%20366.74%2016.43-14.38-16.43-14.37%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E');
+                    background-size: 73%;
+                    background-repeat: no-repeat;
+                    background-position: center center;
+                    margin: 0 0 0 3px;
+                    padding: 0 0 0.25% 0;
+                    animation: 0.15s linkIconOut;
+                    font-size: 103%;
+                }
+
+                .int-link-external:hover::after{
+                    content: "\00a0\00a0\00a0";
+                    background-image: url('data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3Ardf%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2F02%2F22-rdf-syntax-ns%23%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20height%3D%228.6836mm%22%20width%3D%225.2043mm%22%20version%3D%221.1%22%20xmlns%3Acc%3D%22http%3A%2F%2Fcreativecommons.org%2Fns%23%22%20xmlns%3Adc%3D%22http%3A%2F%2Fpurl.org%2Fdc%2Felements%2F1.1%2F%22%20viewBox%3D%220%200%2018.440707%2030.768605%22%3E%3Cg%20transform%3D%22translate(-382.21%20-336.98)%22%3E%3Cpath%20style%3D%22stroke-linejoin%3Around%3Bstroke%3A%23FFF%3Bstroke-linecap%3Around%3Bstroke-miterlimit%3A10%3Bstroke-width%3A2%3Bfill%3Anone%22%20d%3D%22m383.22%20366.74%2016.43-14.38-16.43-14.37%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E');
+                    background-size: 73%;
+                    background-repeat: no-repeat;
+                    background-position: center center;
+                    margin: 0 0 0 3px;
+                    padding: 0 0 0.25% 0;
+                    animation: 0s linkIconIn;
+                    font-size: 103%;
+                }
+            </style>
             <dbp-translated subscribe="lang">
                 <div slot="de">
                     <span>
