--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -349,45 +349,15 @@
         </div>
         <div slot="ticket-description">
             <style>
-                .int-link-external{
-                    transition: background-color 0.15s, color 0.15s;
-                    border-bottom: 1px solid rgba(0,0,0,0.3);
-                }
-
-                .int-link-external:hover{
-                    background-color: black;
-                    color: white;
-                }
-
-                .int-link-external:after{
-                    content: "\00a0\00a0\00a0";
-                    background-image: url('data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3Ardf%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2F02%2F22-rdf-syntax-ns%23%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20height%3D%228.6836mm%22%20width%3D%225.2043mm%22%20version%3D%221.1%22%20xmlns%3Acc%3D%22http%3A%2F%2Fcreativecommons.org%2Fns%23%22%20xmlns%3Adc%3D%22http%3A%2F%2Fpurl.org%2Fdc%2Felements%2F1.1%2F%22%20viewBox%3D%220%200%2018.440707%2030.768605%22%3E%3Cg%20transform%3D%22translate(-382.21%20-336.98)%22%3E%3Cpath%20style%3D%22stroke-linejoin%3Around%3Bstroke%3A%23000%3Bstroke-linecap%3Around%3Bstroke-miterlimit%3A10%3Bstroke-width%3A2%3Bfill%3Anone%22%20d%3D%22m383.22%20366.74%2016.43-14.38-16.43-14.37%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E');
-                    background-size: 73%;
-                    background-repeat: no-repeat;
-                    background-position: center center;
-                    margin: 0 0 0 3px;
-                    padding: 0 0 0.25% 0;
-                    animation: 0.15s linkIconOut;
-                    font-size: 103%;
-                }
-
-                .int-link-external:hover::after{
-                    content: "\00a0\00a0\00a0";
-                    background-image: url('data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3Ardf%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2F02%2F22-rdf-syntax-ns%23%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20height%3D%228.6836mm%22%20width%3D%225.2043mm%22%20version%3D%221.1%22%20xmlns%3Acc%3D%22http%3A%2F%2Fcreativecommons.org%2Fns%23%22%20xmlns%3Adc%3D%22http%3A%2F%2Fpurl.org%2Fdc%2Felements%2F1.1%2F%22%20viewBox%3D%220%200%2018.440707%2030.768605%22%3E%3Cg%20transform%3D%22translate(-382.21%20-336.98)%22%3E%3Cpath%20style%3D%22stroke-linejoin%3Around%3Bstroke%3A%23FFF%3Bstroke-linecap%3Around%3Bstroke-miterlimit%3A10%3Bstroke-width%3A2%3Bfill%3Anone%22%20d%3D%22m383.22%20366.74%2016.43-14.38-16.43-14.37%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E');
-                    background-size: 73%;
-                    background-repeat: no-repeat;
-                    background-position: center center;
-                    margin: 0 0 0 3px;
-                    padding: 0 0 0.25% 0;
-                    animation: 0s linkIconIn;
-                    font-size: 103%;
+                #tu-green-link:after {
+                    filter: none;
                 }
             </style>
             <dbp-translated subscribe="lang">
                 <div slot="de">
                     <span>
                         Vergleichen Sie als Überprüfende/r immer die Tickets, die von Studierenden vorgezeigt werden, mit dem Referenzticket. Der Hintergrund des Ticketbildes wird aus Sicherheitsgründen in regelmäßigen Abständen geändert. Wenn der Hintergrund mit dem des aktuellen Referenztickets übereinstimmt, ist das Ticket gültig. Das Referenzticket berechtigt nicht für den Zugang zu den Räumlichkeiten der TU Graz. Genauere Informationen finden Sie unter: 
-                        <a target="_blank" class="int-link-external" href="https://tu4u.tugraz.at/go/green" title="TU Graz greenlight">
+                        <a target="_blank" class="int-link-external" id="tu-green-link" href="https://tu4u.tugraz.at/go/green" title="TU Graz greenlight">
                             <span>TU Graz greenlight </span>
                         </a>
                     </span>
@@ -395,7 +365,7 @@
                 <div slot="en">
                     <span>
                         As a verifier, always compare the tickets presented by students with the reference ticket. The background of the ticket image changes in regular intervals for security reasons. If the background image matches the one of the reference ticket, the ticket is valid. The reference ticket does not entitle you to enter rooms at TU Graz. More detailed information can be found at: 
-                        <a target="_blank" class="int-link-external" href="https://tu4u.tugraz.at/go/green" title="TU Graz greenlight">
+                        <a target="_blank" class="int-link-external" id="tu-green-link" href="https://tu4u.tugraz.at/go/green" title="TU Graz greenlight">
                             <span>TU Graz greenlight </span>
                         </a>
                     </span>
