Change link css

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -349,6 +349,9 @@
         </div>
         <div slot="ticket-description">
             <style>
+                #tu-green-link {
+                    border-bottom: 1px solid rgba(0,0,0,0.3);
+                }
                 #tu-green-link:after {
                     filter: none;
                 }
