--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -5,6 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="white"/>
 
+    <!-- Meta Data for Search Engines -->
+    <meta title="TU Graz greenlight - Dein Eintrittsticket in die Universität | TU Graz">
+    <meta name="description" content="Erstellen Sie ein Eintrittsticket mit TU Graz greenlight und importieren Sie Ihren Nachweis, um ihn so schon vor dem Besuch der TU Graz für den Eintritt zu validieren." />
+
+    <!-- Meta Data for open graph(facebook & co) -->
+    <meta property="og:locale" content="de_DE" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="TU Graz greenlight: Dein Eintrittsticket in die Universität | TU Graz" />
+    <meta property="og:description" content="Erstellen Sie ein Eintrittsticket mit TU Graz greenlight und importieren Sie Ihren Nachweis, um ihn so schon vor dem Besuch der TU Graz für den Eintritt zu validieren." />
+    <meta property="og:url" content="https://greenlight.tugraz.at/" />
+    <meta property="og:site_name" content="TU Graz greenlight" />
+
     <!-- Favicons -->
     <link rel="shortcut icon" type="image/x-icon" href="<%= getPrivateUrl('icon/favicon.ico') %>">
     <link rel="icon" type="image/svg+xml" href="<%= getPrivateUrl('icon/favicon.svg') %>" sizes="any">
