Move the appshell slots to global overrides

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -103,7 +103,7 @@
 </<%= name %>>
 
 <template id="global-override">
-    <template id="dbp-greenlight">
+    <template id="<%= name %>">
         <div slot="name">
             TU Graz<br />
             <dbp-translated subscribe="lang">
