--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -57,17 +57,38 @@
             font-family: 'Source Sans Pro', 'Calibri', 'Arial', 'sans-serif';
             font-weight: 300;
             margin: 0;
+            background-color: var(--dbp-override-base-light);
+            color: var(--dbp-override-text-dark);
         }
 
         /* TU-Graz style override */
         html {
-            --dbp-override-primary-bg-color: #245b78;
-            --dbp-override-primary-button-border: solid 1px #245b78;
-            --dbp-override-info-bg-color: #245b78;
-            --dbp-override-danger-bg-color: #e4154b;
-            --dbp-override-warning-bg-color: #ffe183;
-            --dbp-override-warning-text-color: black;
-            --dbp-override-success-bg-color: #259207;
+             --dbp-override-base-light: #ffffff;
+             --dbp-override-base-dark: #000000;
+             --dbp-override-text-light: #ffffff;
+             --dbp-override-text-dark: #000000;
+             --dbp-override-text-muted-light: #afaca7;
+             --dbp-override-text-muted-dark: #767676;
+             --dbp-override-accent-light: #e4154b;
+             --dbp-override-accent-dark: #e4154b;
+             --dbp-override-primary-light: #73899e;
+             --dbp-override-primary-dark: #245b78;
+             --dbp-override-secondary-light: #ffffff;
+             --dbp-override-secondary-dark: #000000;
+             --dbp-override-info-light: #73899e;
+             --dbp-override-info-dark: #245b78;
+             --dbp-override-success-light: #75c438;
+             --dbp-override-success-dark: #148800;
+             --dbp-override-warning-light: #ffad4d;
+             --dbp-override-warning-dark: #af6405;
+             --dbp-override-danger-light: #ff5d79;
+             --dbp-override-danger-dark: #e4154b;
+             --dbp-override-border-light: 1px solid #ffffff;
+             --dbp-override-border-dark: 1px solid #000000;
+             --dbp-override-hover-base: #000000;
+             --dbp-override-hover-text: #ffffff;
+
+
             --dbp-override-image-nextcloud: url(<%= getUrl('') %>images/nextcloud.svg);
         }
     </style>
@@ -143,8 +164,8 @@
                 }
 
                 .footer-links a:hover {
-                    color: #fff;
-                    background-color: #000;
+                    color: var(--dbp-hover-text);
+                    background-color: var(--dbp-hover-base);
                 }
             </style>
             <dbp-translated subscribe="lang">
@@ -176,12 +197,12 @@
             <style>
                 .int-link-external{
                     transition: background-color 0.15s, color 0.15s;
-                    border-bottom: 1px solid rgba(0,0,0,0.3);
+                    border-bottom: var(--dbp-border-dark);
                 }
 
                 .int-link-external:hover{
-                    background-color: black;
-                    color: white;
+                    background-color: var(--dbp-hover-base);
+                    color: var(--dbp-hover-text);
                 }
 
                 .int-link-external:after{
@@ -263,12 +284,12 @@
             <style>
                 .int-link-internal{
                     transition: background-color 0.15s, color 0.15s;
-                    border-bottom: 1px solid rgba(0,0,0,0.3);
+                    border-bottom: var(--dbp-border-dark);
                 }
 
                 .int-link-internal:hover{
-                    background-color: black;
-                    color: white;
+                    background-color: var(--dbp-hover-base);
+                    color: var(--dbp-hover-text);
                     text-decoration: underline;
                 }
 
@@ -276,7 +297,7 @@
                 and (orientation: portrait)
                 and (max-width:768px) {
                     .int-link-internal{
-                        border-bottom: 1px solid white;
+                        border-bottom: var(--dbp-border-light);
                     }
                 }
             </style>
@@ -302,12 +323,12 @@
             <style>
                 .int-link-internal{
                     transition: background-color 0.15s, color 0.15s;
-                    border-bottom: 1px solid white;
+                    border-bottom: var(--dbp-border-light);
                 }
 
                 .int-link-internal:hover{
-                    background-color: black;
-                    color: white;
+                    background-color: var(--dbp-hover-base);
+                    color: var(--dbp-hover-text);
                     text-decoration: none;
                 }
 
@@ -315,7 +336,7 @@
                 and (orientation: portrait)
                 and (max-width:768px) {
                     .int-link-internal{
-                        border-bottom: 1px solid white;
+                        border-bottom: var(--dbp-border-light);
                     }
                 }
             </style>
@@ -365,7 +386,7 @@
         <div slot="ticket-description">
             <style>
                 #tu-green-link {
-                    border-bottom: 1px solid rgba(0,0,0,0.3);
+                    border-bottom: var(--dbp-border-dark);
                 }
                 #tu-green-link:after {
                     filter: none;
@@ -404,12 +425,12 @@
             <style>
                 .int-link-external {
                     transition: background-color 0.15s, color 0.15s;
-                    border-bottom: 1px solid white;
+                    border-bottom: var(--dbp-border-light);
                 }
 
                 .int-link-external:hover {
-                    background-color: black;
-                    color: white;
+                    background-color: var(--dbp-hover-base);
+                    color: var(--dbp-hover-text);
                 }
 
                 .int-link-external:after {
@@ -436,6 +457,42 @@
                     animation: 0s linkIconIn;
                     font-size: 103%;
                 }
+
+                .int-link-external-light {
+                    transition: background-color 0.15s, color 0.15s;
+                    border-bottom: var(--dbp-border-light);
+                    color: var(--dbp-text-light);
+                }
+
+                .int-link-external-light:hover {
+                    background-color: var(--dbp-hover-base);
+                    color: var(--dbp-hover-text);
+                }
+
+                .int-link-external-light:after {
+                    filter: invert(100%);
+                    content: "\00a0\00a0\00a0";
+                    background-image: url('data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3Ardf%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2F02%2F22-rdf-syntax-ns%23%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20height%3D%228.6836mm%22%20width%3D%225.2043mm%22%20version%3D%221.1%22%20xmlns%3Acc%3D%22http%3A%2F%2Fcreativecommons.org%2Fns%23%22%20xmlns%3Adc%3D%22http%3A%2F%2Fpurl.org%2Fdc%2Felements%2F1.1%2F%22%20viewBox%3D%220%200%2018.440707%2030.768605%22%3E%3Cg%20transform%3D%22translate(-382.21%20-336.98)%22%3E%3Cpath%20style%3D%22stroke-linejoin%3Around%3Bstroke%3A%23000%3Bstroke-linecap%3Around%3Bstroke-miterlimit%3A10%3Bstroke-width%3A2%3Bfill%3Anone%22%20d%3D%22m383.22%20366.74%2016.43-14.38-16.43-14.37%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E');
+                    background-size: 73%;
+                    background-repeat: no-repeat;
+                    background-position: center center;
+                    margin: 0 0 0 3px;
+                    padding: 0 0 0.25% 0;
+                    animation: 0.15s linkIconOut;
+                    font-size: 103%;
+                }
+
+                .int-link-external-light:hover::after {
+                    content: "\00a0\00a0\00a0";
+                    background-image: url('data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3Ardf%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2F02%2F22-rdf-syntax-ns%23%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20height%3D%228.6836mm%22%20width%3D%225.2043mm%22%20version%3D%221.1%22%20xmlns%3Acc%3D%22http%3A%2F%2Fcreativecommons.org%2Fns%23%22%20xmlns%3Adc%3D%22http%3A%2F%2Fpurl.org%2Fdc%2Felements%2F1.1%2F%22%20viewBox%3D%220%200%2018.440707%2030.768605%22%3E%3Cg%20transform%3D%22translate(-382.21%20-336.98)%22%3E%3Cpath%20style%3D%22stroke-linejoin%3Around%3Bstroke%3A%23000%3Bstroke-linecap%3Around%3Bstroke-miterlimit%3A10%3Bstroke-width%3A2%3Bfill%3Anone%22%20d%3D%22m383.22%20366.74%2016.43-14.38-16.43-14.37%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E');
+                    background-size: 73%;
+                    background-repeat: no-repeat;
+                    background-position: center center;
+                    margin: 0 0 0 3px;
+                    padding: 0 0 0.25% 0;
+                    animation: 0s linkIconIn;
+                    font-size: 103%;
+                }
             </style>
             <dbp-translated subscribe="lang">
                 <div slot="de">
@@ -443,7 +500,7 @@
                     <br>
                     <p>
                         Ist ein <strong>gültiger Grüner Pass</strong> auf dem Gerät importiert, wird dessen QR-Code angezeigt und das Ticket in Farbe dargestellt. Der QR-Code kann mit
-                        <a href="https://greencheck.gv.at/" title="GreenCheck" target="_blank" class="int-link-external">GreenCheck</a> überprüft werden.
+                        <a href="https://greencheck.gv.at/" title="GreenCheck" target="_blank" class="int-link-external-light">GreenCheck</a> überprüft werden.
                         <% if(gpSearchSelfTestStringArray && gpSearchSelfTestStringArray !== '' && selfTestValid){ %>
                             <br><br>
                             Ist ein <strong>Selbsttest</strong> des Landes Steiermark oder Kärnten auf dem Gerät importiert, wird dessen QR-Code angezeigt und das Ticket in Graustufen dargestellt.
@@ -456,7 +513,7 @@
                     <br>
                     <p>
                         If a <strong>valid health certitificate</strong> is available on this device then its QR code is displayed and the ticket is shown in color.
-                        This QR code can be checked with <a href="https://greencheck.gv.at/" title="GreenCheck" target="_blank" class="int-link-external">GreenCheck</a>.
+                        This QR code can be checked with <a href="https://greencheck.gv.at/" title="GreenCheck" target="_blank" class="int-link-external-light">GreenCheck</a>.
                         <% if(gpSearchSelfTestStringArray && gpSearchSelfTestStringArray !== '' && selfTestValid){ %>
                             <br><br>
                             If a <strong>self-test</strong> that was issued by Styria and Carinthia, is available on this device then its QR code is displayed and the ticket is shown in black and white.
