--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -163,6 +163,17 @@
                     text-decoration: none;
                 }
 
+                input::-moz-focus-inner { border: 0; }
+
+                :focus-visible{
+                    outline:none !important;
+                    outline-width: 0 !important;
+                    box-shadow: none;
+                    -moz-box-shadow: none;
+                    -webkit-box-shadow: none;
+                    box-shadow: 0px 0px 9px 2px var(--dbp-accent-dark);
+                }
+
             </style>
             <dbp-translated subscribe="lang">
                 <div slot="de" class="footer-links">
